--- a/styles/home.css
+++ b/styles/home.css
@@ -19,18 +19,23 @@ body{
 }
 
 main{
-	margin: 0 10rem;
+	
 }
 
 /*************************************************************/
 /************************** navigation ***********************/
 /*************************************************************/
+header{
+	background: #1f2937;
+}
 
 nav{
+	margin: 0 10rem;
 	background: #1f2937;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+
 }
 
 .logo-container{
@@ -59,6 +64,12 @@ nav{
 	color: #3882f6;
 	transition: 0.5s;
 }
+
+/*************************************************************/
+/*********************** Hero Section ************************/
+/*************************************************************/
+
+
 
 /*************************************************************/
 /**************************** footer *************************/
