--- a/styles/home.css
+++ b/styles/home.css
@@ -31,7 +31,6 @@ header{
 
 nav{
 	margin: 0 10rem;
-	background: #1f2937;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -69,6 +68,15 @@ nav{
 /*********************** Hero Section ************************/
 /*************************************************************/
 
+.section-hero{
+	background: #1f2937;
+	color: #e5e7fb;
+	padding-top: 4.8rem;
+}
+
+.section-hero div{
+	margin: 0 10rem;
+}
 
 
 /*************************************************************/
@@ -77,9 +85,10 @@ nav{
 
 footer{
 	background: #1f2937;
-	color: #efefef;
+	color: #e5e7fb;
 	height: 4.8rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-top: 2.4rem;
 }
