--- a/styles/home.css
+++ b/styles/home.css
@@ -22,6 +22,14 @@ main{
 	
 }
 
+.flex-center{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.flex-column{
+	flex-direction: column;
+}
 /*************************************************************/
 /************************** navigation ***********************/
 /*************************************************************/
@@ -32,9 +40,8 @@ header{
 nav{
 	margin: 0 10rem;
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
-
+	justify-content: space-between;
 }
 
 .logo-container{
@@ -47,9 +54,6 @@ nav{
 }
 
 .anchor-container{
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	gap: 2.4rem;
 	padding-right: 2.4rem;
 }
@@ -62,6 +66,7 @@ nav{
 .anchor-container a:hover{
 	color: #3882f6;
 	transition: 0.5s;
+	cursor: pointer;
 }
 
 /*************************************************************/
@@ -72,10 +77,86 @@ nav{
 	background: #1f2937;
 	color: #e5e7fb;
 	padding-top: 4.8rem;
+	padding-bottom: 4.8rem;
 }
 
-.section-hero div{
-	margin: 0 10rem;
+.hero-text-container{
+	margin-right: 17rem;
+}
+.hero-img-container{
+	margin: 0;
+}
+
+.hero-text-container h1{
+	font-weight: extra-bold;
+	font-size: 4.8rem;
+	color: #f9faf8;
+	margin-bottom: 1.2rem;
+}
+
+.hero-text-container p{
+	font-size: 1.8rem;
+	color: #e5e7eb;
+	margin-bottom: 1.8rem;
+	line-height: 1.3;
+}
+
+.hero-text-container button{
+	margin-bottom: 1.2rem;
+	padding: 1rem 2rem;
+	background: #3882f6;
+	border-radius: 10px;
+	color: #e5e7fb;
+	border: none;
+	font-weight: 600;
+	font-size: 1.8rem;
+}
+
+.hero-text-container button:hover{
+	transition: 0.5s;
+	transform: scale(1.05);
+	cursor: pointer;
+}
+
+.hero-img-container img{
+	width: 40rem;
+	height: auto;
+	border-radius: 5px;
+}
+
+/*************************************************************/
+/*********************** populars-section ********************/
+/*************************************************************/
+
+.section-populars{
+	margin-bottom: 3.2rem;
+}
+
+.section-populars h2{
+	font-size: 3.6rem;
+	font-weight: extra-bold;
+	color: #1f2937;
+	margin-top: 4.8rem;
+	margin-bottom: 3.2rem;
+}
+
+.populars-container{
+	gap: 10rem;
+	font-size: 1.8rem;
+}
+
+
+.populars-container article img{
+	width: 200px;
+	height: 150px;
+	margin-bottom: 1.2rem;
+	border-radius: 5px;
+}
+
+.populars-container article:hover{
+	transform: scale(1.1);
+	transition: 0.5s;
+	cursor: pointer;
 }
 
 
@@ -87,8 +168,5 @@ footer{
 	background: #1f2937;
 	color: #e5e7fb;
 	height: 4.8rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	margin-top: 2.4rem;
 }
