--- a/styles/home.css
+++ b/styles/home.css
@@ -230,3 +230,7 @@ footer{
 	height: 4.8rem;
 	margin-top: 2.4rem;
 }
+
+/*************************************************************/
+/********************** media-queries ************************/
+/*************************************************************/
