--- a/styles/home.css
+++ b/styles/home.css
@@ -19,9 +19,32 @@ body{
 }
 
 main{
-	
+	max-width: 1800px;
 }
 
+.flex-center{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.flex-column{
+	flex-direction: column;
+}
+
+.btn{
+	padding: 1rem 2rem;
+	background: #3882f6;
+	border-radius: 10px;
+	color: #e5e7fb;
+	font-weight: 600;
+	font-size: 1.8rem;
+}
+
+.hover:hover{
+	transition: 0.5s;
+	cursor: pointer;
+}
 /*************************************************************/
 /************************** navigation ***********************/
 /*************************************************************/
@@ -32,9 +55,8 @@ header{
 nav{
 	margin: 0 10rem;
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
-
+	justify-content: space-between;
 }
 
 .logo-container{
@@ -47,9 +69,6 @@ nav{
 }
 
 .anchor-container{
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	gap: 2.4rem;
 	padding-right: 2.4rem;
 }
@@ -61,7 +80,7 @@ nav{
 }
 .anchor-container a:hover{
 	color: #3882f6;
-	transition: 0.5s;
+	
 }
 
 /*************************************************************/
@@ -72,12 +91,134 @@ nav{
 	background: #1f2937;
 	color: #e5e7fb;
 	padding-top: 4.8rem;
+	padding-bottom: 4.8rem;
 }
 
-.section-hero div{
-	margin: 0 10rem;
+.hero-text-container{
+	margin-right: 17rem;
+}
+.hero-img-container{
+	margin: 0;
 }
 
+.hero-text-container h1{
+	font-weight: 900;
+	font-size: 4.8rem;
+	color: #f9faf8;
+	margin-bottom: 1.2rem;
+}
+
+.hero-text-container p{
+	font-size: 1.8rem;
+	color: #e5e7eb;
+	margin-bottom: 1.8rem;
+	line-height: 1.3;
+}
+
+.hero-text-container button{
+	margin-bottom: 1.2rem;
+	border: none;
+}
+
+.hero-text-container button:hover{
+	transform: scale(1.05);
+}
+
+.hero-img-container img{
+	width: 40rem;
+	height: auto;
+	border-radius: 5px;
+}
+
+/*************************************************************/
+/*********************** populars-section ********************/
+/*************************************************************/
+
+.section-populars{
+	margin-bottom: 3.2rem;
+}
+
+.section-populars h2{
+	font-size: 3.6rem;
+	font-weight: 900;
+	color: #1f2937;
+	margin-top: 4.8rem;
+	margin-bottom: 3.2rem;
+}
+
+.populars-container{
+	gap: 10rem;
+	font-size: 1.8rem;
+}
+
+
+.populars-container article img{
+	width: 200px;
+	height: 150px;
+	margin-bottom: 1.2rem;
+	border-radius: 5px;
+}
+
+.populars-container article:hover{
+	transform: scale(1.1);
+}
+
+/*************************************************************/
+/************************* testimonies ***********************/
+/*************************************************************/
+
+.section-testimonies{
+	background: #e5e7eb;
+	color: #1f2937;
+	font-size: 3.6rem;
+	font-weight: 300;
+	font-style: italic;
+	margin-bottom: 6.8rem;
+}
+
+.quote{
+	margin:3.2rem 3.2rem 0 3.2rem;
+}
+
+.customer{
+	align-self: flex-end;
+	margin-right: 10rem;
+	margin-bottom: 1.2rem;
+}
+
+/*************************************************************/
+/***************************** Cta ***************************/
+/*************************************************************/
+
+.cta-section{
+	background: #3882f6;
+	margin: 0 20rem 6.8rem 20rem;
+	padding: 4.8rem 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	border-radius: 10px;
+}
+
+.cta-section h3{
+	font-size: 2.8rem;
+	color: #f9faf8;
+}
+
+.cta-section p {
+	color: #f9faf8;
+	font-size: 1.4rem;
+}
+
+.cta-section button{
+	padding: 1.2rem 2.4rem;
+	border: 1px solid #f9faf8;
+	box-shadow: 1px 1px 7px 3px #f9faf8;
+}
+.cta-section button:hover{
+	transform: scale(1.1);
+	box-shadow: 1px 1px 10px 5px #f9faf8;
+}
 
 /*************************************************************/
 /**************************** footer *************************/
@@ -87,8 +228,11 @@ footer{
 	background: #1f2937;
 	color: #e5e7fb;
 	height: 4.8rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	margin-top: 2.4rem;
 }
+
+/*************************************************************/
+/********************** media-queries ************************/
+/*************************************************************/
+
+/*First breakPoint at 1440px*/
