--- a/styles/kathmandu.css
+++ b/styles/kathmandu.css
@@ -305,3 +305,21 @@ footer{
 	height: 4.8rem;
     font-size: 1.5rem;
 }
+
+
+@media only screen and (max-width: 1200px) {
+    .details-container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .details-text-container{
+        width: 100%;
+        height: 100%;
+        gap: 1.5rem;
+    }
+    .details-section:nth-of-type(even) > .details-container {
+        flex-direction: column-reverse;
+    }
+    
+}
