--- a/styles/brussels.css
+++ b/styles/brussels.css
@@ -1,67 +1,17 @@
 /* Imports  */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap");
 /* font-family: 'Roboto', sans-serif; */
 /* general */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-/* end general */
-/*************************************************************/
-/************************** navigation ***********************/
-/*************************************************************/
-header {
-  background: #1f2937;
-}
-
-nav {
-  margin: 0 10rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.logo-container {
-}
-
-.logo-container img {
-  width: 14rem;
-  height: 6rem;
-}
-
-.anchor-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2.4rem;
-  padding-right: 2.4rem;
-}
-
-.anchor-container a {
   text-decoration: none;
-  color: #f9faf8;
-  font-size: 2.4rem;
-}
-.anchor-container a:hover {
-  color: #3882f6;
-  transition: 0.5s;
-}
-body {
   font-family: "Roboto", sans-serif;
 }
-
-main {
-  padding: 250px 130px 150px 130px;
-  background-image: url(../images/brussels/navimage.jpg);
-  background-size: cover;
-  background-position: center;
-  /* opacity: 0.8; */
-}
-main h3 {
-  width: 40%;
-  margin: 10px 0 25px 0;
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 button {
   background-color: #3882f6;
@@ -71,15 +21,101 @@ button {
   border-bottom-left-radius: 20px;
   border: none;
   box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.5);
+  transition: all 200ms;
 }
+
 button:hover {
-  background-color: #1f2937;
+  background-color: #2469da;
+  cursor: pointer;
 }
+/* end general */
+/*************************************************************/
+/************************** navigation ***********************/
+/*************************************************************/
+header {
+  background: #1f2937;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+}
+
+nav {
+  margin: 0 10rem;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo-container {
+  color: #f9faf8;
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+
+.anchor-container {
+  display: flex;
+  gap: 2.4rem;
+  padding-right: 2.4rem;
+}
+
+.anchor-container a {
+  color: #e5e7eb;
+  font-size: 1.8rem;
+  position: relative;
+}
+.anchor-container a.brussels-page {
+  font-weight: bold;
+  font-size: 2rem;
+  pointer-events: none;
+}
+.anchor-container a:hover {
+  color: #3882f6;
+}
+.anchor-container a::after {
+  content: "";
+  width: 0;
+  height: 2px;
+  position: absolute;
+  background-color: #e5e7eb;
+  left: 0;
+  bottom: -1px;
+  transition: all 300ms;
+}
+.anchor-container a:hover::after {
+  width: 100%;
+  background-color: #3882f6;
+}
+
+/* end nav  */
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+main {
+  padding: 250px 130px 150px 130px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/brussels/navimage.jpg);
+  background-size: cover;
+  background-position: center;
+  /* opacity: 0.8; */
+}
+h1 {
+  color: white;
+  font-size: 50px;
+}
+main h3 {
+  width: 40%;
+  margin: 10px 0 25px 0;
+  color: white;
+  font-size: 20px;
+  font-weight: normal;
+}
+
 h2 {
   padding: 50px;
   text-align: center;
-  font-size: 80px;
-  font-family: "Bonheur Royale", cursive;
+  font-size: 50px;
 }
 .places {
   padding: 35px;
