--- a/styles/home.css
+++ b/styles/home.css
@@ -19,7 +19,7 @@ body{
 }
 
 main{
-	max-width: 1800px;
+	
 }
 
 .flex-center{
@@ -57,10 +57,13 @@ nav{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	padding: 2rem;
 }
 
-.logo-container{
-	
+.logo-container p{
+	font-size: 2.4rem;
+	color: #f9faf8;
+	font-weight: bold;
 }
 
 .logo-container img {
@@ -76,7 +79,7 @@ nav{
 .anchor-container a {
 	text-decoration: none;
 	color: #F9FAF8;
-	font-size: 2.4rem;
+	font-size: 1.8rem;
 }
 .anchor-container a:hover{
 	color: #3882f6;
@@ -90,13 +93,13 @@ nav{
 .section-hero{
 	background: #1f2937;
 	color: #e5e7fb;
-	padding-top: 4.8rem;
-	padding-bottom: 4.8rem;
+	padding: 10rem 0;
 }
 
 .hero-text-container{
 	margin-right: 17rem;
 }
+
 .hero-img-container{
 	margin: 0;
 }
@@ -135,7 +138,7 @@ nav{
 /*************************************************************/
 
 .section-populars{
-	margin-bottom: 3.2rem;
+	margin-bottom: 10rem;
 }
 
 .section-populars h2{
@@ -174,6 +177,7 @@ nav{
 	font-weight: 300;
 	font-style: italic;
 	margin-bottom: 6.8rem;
+	padding: 10rem;
 }
 
 .quote{
