--- a/styles/brussels.css
+++ b/styles/brussels.css
@@ -17,6 +17,7 @@ button {
   background-color: #3882f6;
   color: white;
   padding: 15px;
+  font-size: 15px;
   border-top-right-radius: 23px;
   border-bottom-left-radius: 20px;
   border: none;
@@ -116,36 +117,77 @@ h2 {
   padding: 50px;
   text-align: center;
   font-size: 50px;
+  color: white;
 }
+/* places to visit  */
 .places {
-  padding: 35px;
+  background-color: rgb(31 41 55 / 89%);
+}
+.card-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 10px;
 }
-.places div {
-  position: relative; /* Make the container position relative */
-  box-shadow: -15px -18px 19px 1px rgba(0, 0, 0, 0.5);
-  overflow: hidden; /* Ensure overflow doesn't affect positioning */
-  border-radius: 15px;
-}
-.places div:hover {
-  transform: translateY(-15px);
+.card {
+  width: 450px;
+  background-color: #e5e4e2;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0px 2px 9px 9px rgba(0, 0, 0, 0.2);
+  margin: 20px;
   transition: transform 0.3s ease;
 }
-.places div img {
-  width: 380px;
-  object-fit: cover;
+.card:hover {
+  transform: translateY(-15px);
 }
-.places div h5 {
-  position: absolute; /* Position the h5 absolutely */
-  top: 50%; /* Align to the vertical center */
-  left: 50%; /* Align to the horizontal center */
-  transform: translate(-50%, -50%); /* Center the h5 */
-  margin: 0; /* Remove default margin */
-  padding: 10px;
+.card img {
+  width: 100%;
+  height: auto;
+}
+.card-content {
+  padding: 16px;
+}
+.card-content h3 {
+  font-size: 28px;
+  margin-bottom: 8px;
+}
+.card-content p {
+  font-size: 15px;
+  line-height: 1.3;
+}
+/* end places  */
+/* reasons section */
+.reasons-section {
+  display: flex;
+  padding-top: 100px;
+  background-color: #e5e4e2;
+}
+.content {
+  margin-left: 200px;
+  padding-right: 25px;
+  display: block;
+}
+.content h3 {
+  font-size: 50px;
+  margin-bottom: 20px;
+  color: #1f2937;
+}
+.content p {
   font-size: 25px;
-  color: white;
-  text-shadow: 2px 2px 2px black;
+}
+.reasons-section img {
+  width: 30%;
+  height: auto;
+  margin: 0px 200px 30px 0px;
+}
+/* reasons end  */
+.testimony {
+  padding-top: 30px;
+}
+.testimony h3 {
+  font-size: 28px;
+  text-align: center;
 }
 footer {
   background: #1f2937;
