--- a/styles/brussels.css
+++ b/styles/brussels.css
@@ -48,7 +48,7 @@ nav {
   justify-content: space-between;
 }
 
-.logo-container {
+.logo-container a {
   color: #f9faf8;
   font-size: 2.4rem;
   font-weight: bold;
