--- a/styles/kathmandu.css
+++ b/styles/kathmandu.css
@@ -239,6 +239,7 @@ nav{
     font-weight: 600;
     font-size: 4.8rem;
     letter-spacing: 0.1rem;
+    text-align: center;
 }
 .details-container{
     height: 80%;
@@ -250,11 +251,10 @@ nav{
     box-shadow: 2px 2px 5px #1F2037;
     max-width: 80%;
 }
-.image-container{
-    overflow: hidden;
-}
-.image-container img{
-    min-height: 100%;
+.details-container img{
+    width: 50%;
+    height: auto;
+    object-fit: cover;
 }
 .details-text-container{
     display: flex;
@@ -317,6 +317,11 @@ footer{
         width: 100%;
         height: 100%;
         gap: 1.5rem;
+    }
+    .details-container img{
+        width: 100%;
+        height: 50%;
+        object-fit: cover;
     }
     .details-section:nth-of-type(even) > .details-container {
         flex-direction: column-reverse;
