--- a/styles/home.css
+++ b/styles/home.css
@@ -19,7 +19,7 @@ body{
 }
 
 main{
-	
+	width: 100%;
 }
 
 .flex-center{
@@ -48,6 +48,8 @@ main{
 /*************************************************************/
 /************************** navigation ***********************/
 /*************************************************************/
+
+
 header{
 	background: #1f2937;
 }
@@ -93,7 +95,7 @@ nav{
 .section-hero{
 	background: #1f2937;
 	color: #e5e7fb;
-	padding: 10rem 0;
+	padding: 10rem 5rem;
 }
 
 .hero-text-container{
@@ -235,8 +237,20 @@ footer{
 	margin-top: 2.4rem;
 }
 
+
 /*************************************************************/
 /********************** media-queries ************************/
 /*************************************************************/
+/* rem and em do NOT depend on html font-size in media queries! Instead, 1rem = 1em = 16px */
 
-/*First breakPoint at 1440px*/
+/*First breakPoint at 1100px*/
+@media(max-width:1100px){
+	.populars.container{
+		gap: 5rem;
+		width: 10px;
+		font-size: 2.4rem;
+	}
+	footer{
+		font-size: 9.8rem;
+	}
+}
