--- a/styles/home.css
+++ b/styles/home.css
@@ -45,6 +45,9 @@ main{
 	transition: 0.5s;
 	cursor: pointer;
 }
+.logo-anchor{
+	text-decoration: none;
+}
 /*************************************************************/
 /************************** navigation ***********************/
 /*************************************************************/
@@ -243,14 +246,3 @@ footer{
 /*************************************************************/
 /* rem and em do NOT depend on html font-size in media queries! Instead, 1rem = 1em = 16px */
 
-/*First breakPoint at 1100px*/
-@media(max-width:1100px){
-	.populars.container{
-		gap: 5rem;
-		width: 10px;
-		font-size: 2.4rem;
-	}
-	footer{
-		font-size: 9.8rem;
-	}
-}
