--- a/styles/home.css
+++ b/styles/home.css
@@ -50,6 +50,14 @@ main{
 	text-decoration: none;
 }
 
+.icon{
+	font-size: 1.8rem;
+	color: #e5e7fb;
+}
+.icon:hover{
+	color: #3882f6;
+}
+
 /*************************************************************/
 /************************** navigation ***********************/
 /*************************************************************/
@@ -244,10 +252,18 @@ nav{
 footer{
 	background: #1f2937;
 	color: #e5e7fb;
-	height: 4.8rem;
 	margin-top: 2.4rem;
 }
 
+footer p{
+	margin-top: 2.4rem;
+}
+
+footer div{
+	gap: 1.2rem;
+	margin-top: 1.2rem;
+	padding: 1.2rem 0;
+}
 
 /*************************************************************/
 /********************** media-queries ************************/
