--- a/styles/home.css
+++ b/styles/home.css
@@ -22,6 +22,10 @@ main{
 	width: 100%;
 }
 
+nav aside{
+	display: none;
+}
+
 .flex-center{
 	display: flex;
 	justify-content: center;
@@ -268,5 +272,76 @@ footer div{
 /*************************************************************/
 /********************** media-queries ************************/
 /*************************************************************/
-/* rem and em do NOT depend on html font-size in media queries! Instead, 1rem = 1em = 16px */
+@media(max-width:1200px){
+	.populars-container{
+		gap: 5rem;
+	}
+	.cta-section{
+		margin: 0 5rem 6.8rem 5rem
+	}
+}
+
+@media(max-width:1000px){
+	.populars-container{
+		gap: 2rem;
+	}
+}
+
+@media(max-width:900px){
+	nav{
+		margin: 0 2rem;
+	}
+	.hero-text-container{
+		margin-right: 5rem;
+	}
+	.populars-container{
+		display: grid;
+		grid-template-columns:repeat(2, 1fr);
+	}
+	.section-testimonies{
+		font-size: 2.8rem;
+	}
+}
+
+@media(max-width:730px){
+	nav{
+		margin: 0;
+	}
+	.hero-text-container{
+		margin-right: 2rem;
+		text-align: center;
+	}
+	.section-hero{
+		display: grid;
+		grid-template-rows:repeat(2, 1fr);
+		gap: 2.4rem;
+	}
+	.cta-section{
+		display: grid;
+		grid-template-rows: repeat(2, 1fr);	
+	}
+	.cta-section button{
+		margin-top: 2.4rem;
+	}
+	.anchor-container{
+		display: none;
+	}
+	nav aside {
+		display: block;
+	}
+}
+
+@media(max-width:530px){
+	.cta-section{
+		margin: 0 1rem 6.8rem 1rem;
+		text-align: center;
+	}
+	.section-populars h2{
+		font-size: 2.8rem;
+	}
+	.section-testimonies{
+		font-size: 1.8rem;
+	}
+}
+
 
