--- a/styles/kathmandu.css
+++ b/styles/kathmandu.css
@@ -113,7 +113,7 @@ nav{
 
 
 /*************************************************************/
-/************************** Hero section ***********************/
+/************************** Hero section *********************/
 /*************************************************************/
 
 .hero-section{
@@ -154,7 +154,7 @@ nav{
 }
 
 /*************************************************************/
-/************************** slideshow ***********************/
+/************************** slideshow ************************/
 /*************************************************************/
 
 .slideshow{
@@ -224,7 +224,7 @@ nav{
 }
 
 /*************************************************************/
-/************************** details ***********************/
+/************************** details **************************/
 /*************************************************************/
 
 .details-section{
@@ -305,6 +305,10 @@ footer{
 	height: 4.8rem;
     font-size: 1.5rem;
 }
+
+/*************************************************************/
+/**************************** media queries ******************/
+/*************************************************************/
 
 
 @media only screen and (max-width: 1200px) {
