--- a/styles/brussels.css
+++ b/styles/brussels.css
@@ -1,5 +1,5 @@
 /* Imports  */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 /* font-family: 'Roboto', sans-serif; */
 /* general */
 * {
@@ -150,10 +150,17 @@ h2 {
 .card-content h3 {
   font-size: 28px;
   margin-bottom: 8px;
+  text-align: center;
 }
 .card-content p {
   font-size: 15px;
   line-height: 1.3;
+  padding-bottom: 12px;
+}
+.card-content button {
+  display: block;
+  margin: auto;
+  border-radius: 0;
 }
 /* end places  */
 /* reasons section */
@@ -412,14 +419,7 @@ footer div {
   .card-content {
     padding: 16px;
   }
-  .card-content h3 {
-    font-size: 28px;
-    margin-bottom: 8px;
-  }
-  .card-content p {
-    font-size: 15px;
-    line-height: 1.3;
-  }
+
   /* end places  */
   /* reasons section */
   .reasons-section {
