--- a/styles/kathmandu.css
+++ b/styles/kathmandu.css
@@ -52,6 +52,13 @@ button{
 button:hover{
     background-color: #2469da;
 }
+.icon{
+	font-size: 1.8rem;
+	color: #e5e7fb;
+}
+.icon:hover{
+	color: #3882f6;
+}
 /*************************************************************/
 /************************** navigation ***********************/
 /*************************************************************/
@@ -122,7 +129,6 @@ nav{
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
-
     flex-direction: column;
     color: #F9FAF8;
     gap: 5rem;
@@ -131,12 +137,13 @@ nav{
     font-size: 4.8rem;
     text-wrap: wrap;
     max-width: 50rem;
-
+    text-shadow: 1px 1px 2px black;
 }
 .hero-section h2{
     font-size: 2.4rem;
     text-wrap: wrap;
     max-width: 100rem;
+    text-shadow: 1px 1px 2px black;
 }
 
 .hero-section a{
@@ -302,10 +309,16 @@ i{
 footer{
 	background: #1f2937;
 	color: #e5e7fb;
-	height: 4.8rem;
     font-size: 1.5rem;
 }
-
+footer p{
+	margin-top: 2.4rem;
+}
+footer div{
+	gap: 1.2rem;
+	margin-top: 1.2rem;
+	padding: 1.2rem 0;
+}
 /*************************************************************/
 /**************************** media queries ******************/
 /*************************************************************/
@@ -331,4 +344,18 @@ footer{
         flex-direction: column-reverse;
     }
     
+}
+@media(max-width:900px){
+	nav{
+		margin: 0 2rem;
+	}
+}
+
+@media(max-width:730px){
+	nav{
+		margin: 0;
+		justify-content: center;
+		flex-direction: column;
+	}
+	
 }
