--- a/styles/home.css
+++ b/styles/home.css
@@ -371,6 +371,9 @@ footer div{
 	.section-testimonies{
 		font-size: 1.8rem;
 	}
+	.populars-container article:hover{
+	transform: scale(1.05);
+}
 
 }
 
