--- a/styles/kathmandu.css
+++ b/styles/kathmandu.css
@@ -37,7 +37,7 @@ html{
 }
 section{
     max-width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     padding: 2rem 0;
 }
 button{
@@ -337,7 +337,7 @@ footer div{
     }
     .details-container img{
         width: 100%;
-        height: 50%;
+        max-height: 40vh;
         object-fit: cover;
     }
     .details-section:nth-of-type(even) > .details-container {
@@ -345,6 +345,9 @@ footer div{
     }
     .details-section h2{
         font-size: 3rem;
+    }
+    section{
+        height: 100%;
     }
     
 }
