--- a/styles/kathmandu.css
+++ b/styles/kathmandu.css
@@ -347,7 +347,8 @@ footer div{
         font-size: 3rem;
     }
     section{
-        height: 100%;
+        min-height: 100vh;
+        height: auto;
     }
     
 }
