--- a/styles/newcastle.css
+++ b/styles/newcastle.css
@@ -1,39 +1,173 @@
+/* Global Styles */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+}
+
 html {
-    font-size: 62.5%;
-    scroll-behavior: smooth;
-  }
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+
+body {
+  margin-top: 70px;
+  background-color: #335a82;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
+h1, h3, h5 {
+  color: whitesmoke;
+}
+
+.words {
+  background-color: #1F2937;
+}
+
+/* Main image */
+.main-image {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+/* Places Styles */
 .places {
-    padding: 35px;
-    display: flex;
-    justify-content: space-evenly;
-  }
+  padding: 35px;
+  display: flex;
+  justify-content: space-evenly;
+}
 
-  .places div {
-    position: relative;
-    box-shadow: -15px -18px 19px 1px rgba(220, 15, 15, 0.5);
-    overflow: hidden; 
-    border-radius: 15px;
-  }
+.places div {
+  position: relative;
+  box-shadow: -15px -18px 19px 1px rgba(220, 15, 15, 0.5);
+  overflow: hidden;
+  border-radius: 15px;
+}
 
-  .places div:hover {
-    transform: translateY(-15px);
-    transition: transform 0.8s ease;
-    box-shadow: -15px -18px 19px 1px rgba(11, 9, 9, 0.5);
-  }
+.places div:hover {
+  transform: translateY(-15px);
+  transition: transform 0.8s ease;
+  box-shadow: -15px -18px 19px 1px rgba(11, 9, 9, 0.5);
+}
 
-  .places div img {
-    width: 380px;
-    object-fit: cover;
-  }
+.places div img {
+  width: 100%;
+  height: 200px; 
+  object-fit: cover; 
+  object-position: center; 
+}
+/* Header */
+header {
+  background: #1F2937;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
+}
 
-  .places div h5 {
-    position: absolute; 
-    top: 50%; 
-    left: 50%; 
-    transform: translate(-50%, -50%);
-    margin: 0; 
-    padding: 10px;
-    font-size: 25px;
-    color: white;
-    text-shadow: 2px 2px 2px rgb(227, 15, 15);
-  }
+/* Nav */
+nav {
+  margin: 0;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #335a82;
+  width: 100%;
+  position: fixed;
+  top: 0;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  color: #F9FAF8;
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+
+.logo-container img {
+  margin-right: 10px;
+  width: 30px;
+}
+
+.anchor-container {
+  display: flex;
+  gap: 2.4rem;
+  padding-right: 2.4rem;
+}
+
+.anchor-container a {
+  color: #E5E7EB;
+  font-size: 1.8rem;
+  position: relative;
+}
+
+.anchor-container a:hover {
+  color: #3882f6;
+}
+
+.anchor-container a::after {
+  content: "";
+  width: 0;
+  height: 2px;
+  position: absolute;
+  background-color: #3061c2;
+  left: 0;
+  bottom: -1px;
+  transition: all 300ms;
+}
+
+.anchor-container a:hover::after {
+  width: 100%;
+  background-color: #3882f6;
+}
+
+/* Footer */
+body {
+  margin-top: 70px;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.icon {
+  font-size: 2.8rem;
+  color: #e5e7fb;
+}
+
+.icon:hover {
+  color: #a2aab6;
+}
+
+footer {
+  background: #010911;
+  color: #e5e7fb;
+}
+
+footer p {
+  font-size: 15px;
+}
+
+footer div {
+  gap: 1.2rem;
+  margin-top: 1.2rem;
+  padding: 1.2rem 0;
+}
