--- a/styles/telaviv.css
+++ b/styles/telaviv.css
@@ -280,7 +280,7 @@ nav {
 footer {
     bottom: 0px;
     width: 100dvw;
-    background: #1f2937;
+    background: #1e63d2;
     color: #e5e7fb;
     height: 4.8rem;
     font-size: 1.5rem;
