--- a/styles/telaviv.css
+++ b/styles/telaviv.css
@@ -285,3 +285,27 @@ footer {
     height: 4.8rem;
     font-size: 1.5rem;
 }
+
+@media(max-width:768px){
+    nav{
+        padding: 8px;
+        height: fit-content;
+        flex-direction: column;
+        justify-content: center;
+        justify-items: center;
+    }
+    .anchor-container a{
+        font-size: 1.2rem;
+    }
+    .logo-container {
+		font-size: 1.8rem;
+	}
+    .current-page{
+        font-size: 1.4rem;
+    }
+    .hero
+    {
+        flex-direction: column;
+        height: fit-content;
+    }
+}
