--- a/styles/newcastle.css
+++ b/styles/newcastle.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  margin-top: 70px;
+  margin-top: 0;
   background-color: #335a82;
 }
 
@@ -78,44 +78,39 @@ header {
 
 /* Nav */
 nav {
-  margin: 0;
-  padding: 1rem;
+  margin: 0 10rem;
   display: flex;
   align-items: center;
-  justify-content: center;
-  background-color: #335a82;
-  width: 100%;
-  position: fixed;
-  top: 0;
+  justify-content: space-between;
+  padding: 2rem;
 }
 
-.logo-container {
-  display: flex;
-  align-items: center;
-  color: #F9FAF8;
+.logo-container p {
   font-size: 2.4rem;
+  color: #f9faf8;
   font-weight: bold;
 }
 
 .logo-container img {
-  margin-right: 10px;
-  width: 30px;
+  width: 14rem;
+  height: 6rem;
 }
 
 .anchor-container {
-  display: flex;
   gap: 2.4rem;
   padding-right: 2.4rem;
 }
 
 .anchor-container a {
-  color: #E5E7EB;
+  text-decoration: none;
+  color: #F9FAF8;
   font-size: 1.8rem;
   position: relative;
 }
 
 .anchor-container a:hover {
   color: #3882f6;
+  
 }
 
 .anchor-container a::after {
@@ -123,7 +118,7 @@ nav {
   width: 0;
   height: 2px;
   position: absolute;
-  background-color: #3061c2;
+  background-color: #E5E7EB;
   left: 0;
   bottom: -1px;
   transition: all 300ms;
@@ -134,65 +129,41 @@ nav {
   background-color: #3882f6;
 }
 
+.anchor-container a:first-child {
+  pointer-events: none;
+  font-weight: 900;
+  font-size: 2rem;
+}
+
+/* Header */
+@media(max-width:1200px){
+	.populars-container{
+		gap: 5rem;
+	}
+	.cta-section{
+		margin: 0 5rem 6.8rem 5rem
+	}
+}
+
+@media(max-width:1000px){
+	.populars-container{
+		gap: 2rem;
+  }
+}
+
 /* Footer */
-body {
-  margin-top: 70px;
+footer{
+	background: #1f2937;
+	color: #e5e7fb;
+	margin-top: 2.4rem;
 }
 
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+footer p{
+	margin-top: 2.4rem;
 }
 
-.flex-column {
-  flex-direction: column;
+footer div{
+	gap: 1.2rem;
+	margin-top: 1.2rem;
+	padding: 1.2rem 0;
 }
-
-.icon {
-  font-size: 2.8rem;
-  color: #e5e7fb;
-}
-
-.icon:hover {
-  color: #a2aab6;
-}
-
-footer {
-  background: #010911;
-  color: #e5e7fb;
-  padding: 20px;
-  text-align: center;
-}
-
-.footer-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.footer p {
-  font-size: 15px;
-}
-
-footer div {
-  gap: 1.2rem;
-  margin-top: 1.2rem;
-  padding: 1.2rem 0;
-}
-
-.image {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  margin-right: 20px;
-}
-
-h3 {
-  font-size: 1.6rem;
-  margin-bottom: 1.2rem;
-}
-
-
