--- a/styles/kathmandu.css
+++ b/styles/kathmandu.css
@@ -37,7 +37,7 @@ html{
 	transition: 0.5s;
 	cursor: pointer;
 }
-section{
+.section{
     max-width: 100%;
     height: 100vh;
     padding: 2rem 0;
@@ -357,7 +357,7 @@ footer nav{
     .details-section h2{
         font-size: 3rem;
     }
-    section{
+    .section{
         min-height: 100vh;
         height: auto;
     }
