--- a/styles/kathmandu.css
+++ b/styles/kathmandu.css
@@ -2,29 +2,28 @@
 /**************************** general ************************/
 /*************************************************************/
 
-*{
-    margin: 0;
+* {
+	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-    text-decoration: none;
-    font-family: "Roboto", sans-serif;
+	text-decoration: none;
+	font-family: "Roboto", sans-serif;
 }
-html{
-    font-size: 62.5%;
-    scroll-behavior: smooth;
-    background-color: #1F2937;
-
+html {
+	font-size: 62.5%;
+	scroll-behavior: smooth;
+	background-color: #1f2937;
 }
-.flex-center{
+.flex-center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.flex-column{
+.flex-column {
 	flex-direction: column;
 }
 
-.btn{
+.btn {
 	padding: 1rem 2rem;
 	background: #3882f6;
 	border-radius: 10px;
@@ -33,303 +32,316 @@ html{
 	font-size: 1.8rem;
 }
 
-.hover:hover{
+.hover:hover {
 	transition: 0.5s;
 	cursor: pointer;
 }
-.section{
-    max-width: 100%;
-    height: 100vh;
-    padding: 2rem 0;
+.section {
+	max-width: 100%;
+	height: 100vh;
+	padding: 2rem 0;
 }
-button{
-    background-color: #3882F6;
-    color: #F9FAF8;
-    border-radius: 6px;
-    padding: 8px 12px;
-    text-align: center;
-    transition: all 200ms;
-    border: none;
+button {
+	background-color: #3882f6;
+	color: #f9faf8;
+	border-radius: 6px;
+	padding: 8px 12px;
+	text-align: center;
+	transition: all 200ms;
+	border: none;
 }
-button:hover{
-    background-color: #2469da;
+button:hover {
+	background-color: #2469da;
 }
-.icon{
+.icon {
 	font-size: 1.8rem;
 	color: #e5e7fb;
 }
-.icon:hover{
+.icon:hover {
 	color: #3882f6;
 }
 /*************************************************************/
 /************************** navigation ***********************/
 /*************************************************************/
 
-header{
-	background: #1F2937;
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem 12rem;
+header {
+	background: #1f2937;
+	position: fixed;
+	width: 100%;
+	z-index: 100;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 2rem 12rem;
 }
 
-.logo-container a{
-	color: #F9FAF8;
-    font-size: 2.4rem;
-    font-weight: bold;
+.logo-container a {
+	color: #f9faf8;
+	font-size: 2.4rem;
+	font-weight: bold;
 }
 
-.anchor-container{
+.anchor-container {
 	gap: 2.4rem;
 	padding-right: 2.4rem;
 }
 .anchor-container a {
 	text-decoration: none;
-	color: #E5E7EB;
+	color: #e5e7eb;
 	font-size: 1.8rem;
-    position: relative;
+	position: relative;
 }
 .current-page {
-    font-weight: bold;
-    font-size: 2rem;
-    pointer-events: none;
+	font-weight: bold;
+	font-size: 2rem;
+	pointer-events: none;
 }
 
-.anchor-container a:hover{
+.anchor-container a:hover {
 	color: #3882f6;
 }
-.anchor-container a::after{
-    content: "";
-    width: 0;
-    height: 2px;
-    position: absolute;
-    background-color: #E5E7EB;
-    left: 0;
-    bottom: -1px;
-    transition: all 300ms;
+.anchor-container a::after {
+	content: "";
+	width: 0;
+	height: 2px;
+	position: absolute;
+	background-color: #e5e7eb;
+	left: 0;
+	bottom: -1px;
+	transition: all 300ms;
 }
-.anchor-container a:hover::after{
-    width: 100%;
-    background-color: #3882f6;
+.anchor-container a:hover::after {
+	width: 100%;
+	background-color: #3882f6;
 }
-
 
 /*************************************************************/
 /************************** Hero section *********************/
 /*************************************************************/
 
-.hero-section{
-    background-image: url("../images/kathmandu/kathmandu-1.jpeg");
-    background-color: rgba(0,0,0,0.5);
-    background-size: cover;
-    background-repeat: no-repeat;
-    text-align: center;
-    flex-direction: column;
-    color: #F9FAF8;
-    gap: 5rem;
+.hero-section {
+	background-image: url("../images/kathmandu/kathmandu-1.jpeg");
+	background-color: rgba(0, 0, 0, 0.5);
+	background-size: cover;
+	background-repeat: no-repeat;
+	text-align: center;
+	flex-direction: column;
+	color: #f9faf8;
+	gap: 5rem;
 }
-.hero-section h1{
-    font-size: 4.8rem;
-    text-wrap: wrap;
-    max-width: 50rem;
-    text-shadow: 1px 1px 2px black;
-    animation: TextUpAnimation 1s ease-in;
+.hero-section h1 {
+	font-size: 4.8rem;
+	text-wrap: wrap;
+	max-width: 50rem;
+	text-shadow: 1px 1px 2px black;
+	animation: TextUpAnimation 1s ease-in;
 }
-.hero-section h2{
-    font-size: 2.4rem;
-    text-wrap: wrap;
-    max-width: 100rem;
-    opacity: 0;
-    text-shadow: 1px 1px 2px black;
-    animation: TextUpAnimation 1s ease-in 0.5s forwards;
+.hero-section h2 {
+	font-size: 2.4rem;
+	text-wrap: wrap;
+	max-width: 100rem;
+	opacity: 0;
+	text-shadow: 1px 1px 2px black;
+	animation: TextUpAnimation 1s ease-in 0.5s forwards;
 }
 
-.hero-section a{
-    background-color: #3882F6;
-    color: #F9FAF8;
-    font-size: 3.5rem;
-    border-radius: 6px;
-    padding: 8px 12px;
-    font-weight: 600;
-    text-align: center;
-    transition: all 200ms;
-    opacity: 0;
-    animation: TextUpAnimation 1s ease-in 1s forwards;
+.hero-section a {
+	background-color: #3882f6;
+	color: #f9faf8;
+	font-size: 3.5rem;
+	border-radius: 6px;
+	padding: 8px 12px;
+	font-weight: 600;
+	text-align: center;
+	transition: all 200ms;
+	opacity: 0;
+	animation: TextUpAnimation 1s ease-in 1s forwards;
 }
-.hero-section a:hover{
-    background-color: #2469da;
+.hero-section a:hover {
+	background-color: #2469da;
 }
 
 @keyframes TextUpAnimation {
-    0%{
-        opacity: 0;
-        transform: translateY(50%);
-    }
-    100%{
-        opacity: 1;
-        transform: translateY(0);
-    }
+	0% {
+		opacity: 0;
+		transform: translateY(50%);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
 
 /*************************************************************/
 /************************** slideshow ************************/
 /*************************************************************/
 
-.slideshow{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #1F2937;
-    padding: 2rem 0;
-    overflow: hidden;
+.slideshow {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #1f2937;
+	padding: 2rem 0;
+	overflow: hidden;
 }
 
-.slider{
-    display: flex;
-    animation: slider 25s ease infinite;
-    animation-delay: 3s;
-    color: #F9FAF8;
+.slider {
+	display: flex;
+	animation: slider 25s ease infinite;
+	animation-delay: 3s;
+	color: #f9faf8;
 }
-.slide{
-    flex:0 0 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    gap: 2rem;
-    background: #1F2937;
+.slide {
+	flex: 0 0 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+	gap: 2rem;
+	background: #1f2937;
 }
-.slide img{
-    border-radius: 2px;
-    max-height: 50%;
-    max-width: 80%;
+.slide img {
+	border-radius: 2px;
+	max-height: 50%;
+	max-width: 80%;
 }
 
-.slide h3{
-    font-size: 5rem;
-    max-width: 60%;
+.slide h3 {
+	font-size: 5rem;
+	max-width: 60%;
 }
-.slide p{
-    font-size: 2rem;
-    max-width: 80%;
+.slide p {
+	font-size: 2rem;
+	max-width: 80%;
 }
-.slide a{
-    background-color: #3882F6;
-    color: #F9FAF8;
-    font-size: 3.5rem;
-    border-radius: 6px;
-    padding: 8px 12px;
-    font-weight: 600;
-    text-align: center;
-    transition: all 200ms;
+.slide a {
+	background-color: #3882f6;
+	color: #f9faf8;
+	font-size: 3.5rem;
+	border-radius: 6px;
+	padding: 8px 12px;
+	font-weight: 600;
+	text-align: center;
+	transition: all 200ms;
 }
-.slide a:hover{
-    background-color: #2469da;
+.slide a:hover {
+	background-color: #2469da;
 }
 @keyframes slider {
-    20% { translate: -100%}
-    30% { translate: -200%}
-    50% { translate: -200%}
-    60% { translate: -300%}
-    70% { translate: -300%}
-    80% { translate: -400%}
-    90% { translate: -400%}
+	20% {
+		translate: -100%;
+	}
+	30% {
+		translate: -200%;
+	}
+	50% {
+		translate: -200%;
+	}
+	60% {
+		translate: -300%;
+	}
+	70% {
+		translate: -300%;
+	}
+	80% {
+		translate: -400%;
+	}
+	90% {
+		translate: -400%;
+	}
 }
 
 /*************************************************************/
 /************************** details **************************/
 /*************************************************************/
 
-.details-section{
-    background-color: rgb(248, 247, 220);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+.details-section {
+	background-color: rgb(248, 247, 220);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
 }
-.details-section h2{
-    font-weight: 600;
-    font-size: 4.8rem;
-    letter-spacing: 0.1rem;
-    text-align: center;
+.details-section h2 {
+	font-weight: 600;
+	font-size: 4.8rem;
+	letter-spacing: 0.1rem;
+	text-align: center;
 }
-.details-container{
-    height: 80%;
-    display: flex;
-    gap: 2rem;
-    background-color: #E5E7EB;
-    overflow: hidden;
-    border-radius: 2rem;
-    box-shadow: 2px 2px 5px #1F2037;
-    max-width: 80%;
-    padding:0;
+.details-container {
+	height: 80%;
+	display: flex;
+	gap: 2rem;
+	background-color: #e5e7eb;
+	overflow: hidden;
+	border-radius: 2rem;
+	box-shadow: 2px 2px 5px #1f2037;
+	max-width: 80%;
+	padding: 0;
 }
-.details-container picture{
-    flex: 0 0 50%;
+.details-container picture {
+	flex: 0 0 50%;
 }
-.details-container picture img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.details-container picture img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
-.details-text-container{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    padding: 5rem;
-    color: #1F2037;
-    text-align: left;
-    gap: 3rem;
-    flex: 0 0 50%;
+.details-text-container {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+	padding: 5rem;
+	color: #1f2037;
+	text-align: left;
+	gap: 3rem;
+	flex: 0 0 50%;
 }
-.details-container p{
-    font-size: 1.8rem;
+.details-container p {
+	font-size: 1.8rem;
 }
-.details-container i{
-    width: 3rem;
+.details-container i {
+	width: 3rem;
 }
-i{
-    text-align: center;
+i {
+	text-align: center;
 }
-.details-text-container legend{
-    display: flex;
-    align-items: center;
+.details-text-container legend {
+	display: flex;
+	align-items: center;
 }
-.details-text-container legend span:first-of-type{
-    font-size: 1.8rem;
-    padding: 0 1rem;
-    flex-grow: 1;
+.details-text-container legend span:first-of-type {
+	font-size: 1.8rem;
+	padding: 0 1rem;
+	flex-grow: 1;
 }
-.details-text-container legend span:last-of-type{
-    justify-self: flex-end;
-    font-size: 1.8rem;
-    font-weight: 500;
+.details-text-container legend span:last-of-type {
+	justify-self: flex-end;
+	font-size: 1.8rem;
+	font-weight: 500;
 }
-.details-container button{
-    margin-top: auto;
-    align-self: center;
-    cursor: pointer;
-    width: 50%;
-    font-size: 2.4rem;
+.details-container button {
+	margin-top: auto;
+	align-self: center;
+	cursor: pointer;
+	width: 50%;
+	font-size: 2.4rem;
 }
 /*************************************************************/
 /**************************** footer *************************/
 /*************************************************************/
 
-footer{
+footer {
 	background: #1f2937;
 	color: #e5e7fb;
-    font-size: 1.5rem;
+	font-size: 1.5rem;
 }
-footer p{
+footer p {
 	margin-top: 2.4rem;
 }
-footer nav{
+footer nav {
 	gap: 1.2rem;
 	margin-top: 1.2rem;
 	padding: 1.2rem 0;
@@ -338,101 +350,95 @@ footer nav{
 /**************************** media queries ******************/
 /*************************************************************/
 
-
 @media only screen and (max-width: 1200px) {
- 
-    .details-text-container{
-        width: 100%;
-        height: 100%;
-        gap: 1.5rem;
-    }
-    .details-container picture img{
-        width: 100%;
-        max-height: 40vh;
-        object-fit: cover;
-    }
-    .details-section:nth-of-type(even) > .details-container {
-        flex-direction: column-reverse;
-    }
-    .details-section h2{
-        font-size: 3rem;
-    }
-    .section{
-        min-height: 100vh;
-        height: auto;
-    }
-    .details-container{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
-    
-}
-@media(max-width:992px){
-	header{
-		margin: 0 2rem;
+	.details-text-container {
+		width: 100%;
+		height: 100%;
+		gap: 1.5rem;
 	}
-    .slide img{
-        max-width: 60%;
-    }
-    
-    .slide h3{
-        font-size: 3.5rem;
-        max-width: 50%;
-    }
-    .slide p{
-        font-size: 1.8rem;
-        max-width: 40%;
-    }
-    .slide a{
-        font-size: 2.5rem;
-        padding: 6px 10px;
-        font-weight: 400;
-    }
+	.details-container picture img {
+		width: 100%;
+		max-height: 40vh;
+		object-fit: cover;
+	}
+	.details-section:nth-of-type(even) > .details-container {
+		flex-direction: column-reverse;
+	}
+	.details-section h2 {
+		font-size: 3rem;
+	}
+	.section {
+		min-height: 100vh;
+		height: auto;
+	}
+	.details-container {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+	}
+}
+@media (max-width: 992px) {
+	.slide img {
+		max-width: 60%;
+	}
+
+	.slide h3 {
+		font-size: 3.5rem;
+		max-width: 50%;
+	}
+	.slide p {
+		font-size: 1.8rem;
+		max-width: 40%;
+	}
+	.slide a {
+		font-size: 2.5rem;
+		padding: 6px 10px;
+		font-weight: 400;
+	}
 }
 
-@media(max-width:768px){
-	header{
+@media (max-width: 768px) {
+	header {
 		margin: 0;
 		justify-content: center;
 		flex-direction: column;
 		padding-top: 1.2rem;
 		gap: 1.2rem;
 	}
-    .anchor-container{
+	.anchor-container {
 		padding-right: 0;
 	}
-	.logo-container a{
+	.logo-container a {
 		font-size: 1.8rem;
 	}
-	.anchor-container a{
+	.anchor-container a {
 		font-size: 1.2rem;
 	}
-	.anchor-container a.current-page{
+	.anchor-container a.current-page {
 		font-size: 1.6rem;
 	}
-    .slide img{
-        max-width: 55%;
-    }
-    
-    .slide h3{
-        font-size: 3rem;
-        max-width: 50%;
-    }
-    .slide p{
-        font-size: 1.5rem;
-        max-width: 40%;
-    }
-    .slide a{
-        font-size: 2.5rem;
-        padding: 6px 10px;
-        font-weight: 400;
-    }
-    .details-text-container button {
-        width: 100%;
-        font-size: 1.6rem;
-    }
-    .hero-section h2{
-        max-width: 90%;
-    }
+	.slide img {
+		max-width: 55%;
+	}
+
+	.slide h3 {
+		font-size: 3rem;
+		max-width: 50%;
+	}
+	.slide p {
+		font-size: 1.5rem;
+		max-width: 40%;
+	}
+	.slide a {
+		font-size: 2.5rem;
+		padding: 6px 10px;
+		font-weight: 400;
+	}
+	.details-text-container button {
+		width: 100%;
+		font-size: 1.6rem;
+	}
+	.hero-section h2 {
+		max-width: 90%;
+	}
 }
